<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:descendantFocusability="blocksDescendants">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="8dp">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_marginBottom="4dp"
                android:scaleType="fitXY"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/movies_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_toEndOf="@id/img_item_photo"
                tools:text="@string/movies_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movies_item_title"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/img_item_photo"
                android:maxLines="3"
                android:text="@string/release_date" />
            <TextView
                android:id="@+id/movies_item_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtReleaseDate"
                android:layout_marginTop="5dp"
                android:layout_marginStart="26dp"
                android:layout_toRightOf="@id/img_item_photo"
                android:maxLines="3"
                android:text="@string/release" />


            <TextView
                android:id="@+id/movies_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movies_item_release"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/img_item_photo"
                android:text="@string/rating" />
            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_favorite_border"
                    android:textSize="12sp" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_share"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/movies_item_overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>