<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="8dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_poster"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="16dp"
            app:cardCornerRadius="@dimen/activity_vertical_margin"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/movies_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/card_poster"
            tools:text="@string/movies_title"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movies_item_title"
            android:layout_marginTop="5dp"
            android:layout_marginStart="26dp"
            android:layout_toRightOf="@id/card_poster"
            android:text="@string/release" />


        <TextView
            android:id="@+id/movies_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtReleaseDate"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/card_poster"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/movies_item_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movies_item_rating"
            android:maxLines="4"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/card_poster"
            android:text="@string/rating" />
        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/card_poster"
            android:layout_toRightOf="@id/card_poster"
            android:orientation="horizontal">

            <ImageView
                android:gravity="start"
                android:id="@+id/imgFav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_favorite_border"
                android:textSize="12sp" />
            <ImageView
                android:gravity="start"
                android:id="@+id/imgShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_share"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>